stop autoplay on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,30 @@ button.navbar-toggle.collapsed{
     text-align: center;
 }
 
-#vid iframe {
-    width: 100%;
-    height: 100vh;
+@media screen and (min-width: 768px) {
+    #vid iframe {
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #vid iframe {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #vid2 iframe {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #vid2 iframe {
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 .transvid {
@@ -285,7 +306,7 @@ margin-top:-55%;
     position: relative;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 768px) {
     .carousel-caption h1 {
         position: absolute;
         top: -750px;
@@ -297,7 +318,7 @@ margin-top:-55%;
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
     .carousel-caption h1 {
         position: absolute;
         font-size: 30px;
